v1.0
- Project creation
- Project in a fully working state.

v1.1
- Fixed bug in class methods. They were missed
- Fixed bug in running from other directories
- Added footer with date and link to this project

v1.2
- Add arguments and cast separate from the actual docstring
- Add option to document the functions

v2.0
- Refactored the program to use classes to organise and store information, thus simplifying the function calls
- Added a settings class which automatically reads/writes a config file, unique to each project being documented
- Updated generated documentation for this project to use multiple files
- Updated README

v2.1
- Added intelligent formatting of docstrings, so that they are flat, and arguments are bulleted
- Removed inspected arguments temporarily. They duplicated the docstrings
- Added warnings when docstrings don't have arguments listed

v2.2
- Fixed bug where sub-directories in the search path caused a crash
- Fixed bug when docs are stored in sub-directory, the link to the Python file doesn't work

v2.3
- Fix importing from sub-directories