@@ -33,7 +33,7 @@ def main():
     for fname in files:
         # Find all classes and functions
 
-        module_name = fname.replace(".py", "").replace(os.sep, ".").replace("-","_")
+        module_name = fname.replace(".py", "").replace(CONFIG.os_sep, ".").replace("-","_")
         mod = get_mod_from_file(fname)
         doc_strings[module_name] = mod.__doc__  # Save file docstring for index document
         func_data = find_functions(mod, module_name)
